# NATConnectivityAnalyzer

./: .gitignore  AutoFitButton.qml  CMakeLists.txt  Credits.qml  Intro.qml  Intro.ui.qml  LICENSE  Main.qml  MainPage.qml  MainThreadController.cpp  MainThreadController.h  NATConnectivityAnalyzer.cpp  NATConnectivityAnalyzer.h  NATConnectivityAnalyzer.pro  NATConnectivityAnalyzer.qrc  NATConnectivityAnalyzer.rc  NATConnectivityAnalyzer.sln  NATConnectivityAnalyzer.ui  NATConnectivityAnalyzer.vcxproj  NATConnectivityAnalyzer.vcxproj.filters  NATConnectivityAnalyzerLogic.cpp  NATConnectivityAnalyzerLogic.h  NATConnectivityAnalyzerLogicRelay.cpp  NATConnectivityAnalyzerLogicRelay.h  NatTypeExplanation.qml  PortForwardExplanation.qml  README.md  Results.qml  WorkerThreadController.cpp  WorkerThreadController.h  cmake_vals.h.in  main.cpp  main.qml  natconnectivityanalyzer_plugin_import.cpp  natconnectivityanalyzer_qml_plugin_import.cpp  qml.qrc  resource.h
MSIXStaging/: AppxManifest.xml
Stunner/: StunAddressAttribute.cpp  StunAddressAttribute.h  StunAttribute.cpp  StunAttribute.h  StunBindingErrorResponseMessage.cpp  StunBindingErrorResponseMessage.h  StunBindingMessage.cpp  StunBindingMessage.h  StunBindingRequestMessage.cpp  StunBindingRequestMessage.h  StunBindingResponseMessage.cpp  StunBindingResponseMessage.h  StunChangeRequestAttribute.cpp  StunChangeRequestAttribute.h  StunClientHelper.cpp  StunClientHelper.h  StunClientTransaction.cpp  StunClientTransaction.h  StunErrorCodeAttribute.cpp  StunErrorCodeAttribute.h  StunErrorResponseMessage.cpp  StunErrorResponseMessage.h  StunGlobals.cpp  StunHeader.cpp  StunHeader.h  StunMessage.cpp  StunMessage.h  StunOS.h  StunPasswordAttribute.cpp  StunPasswordAttribute.h  StunSharedSecretErrorResponseMessage.cpp  StunSharedSecretErrorResponseMessage.h  StunSharedSecretRequestMessage.cpp  StunSharedSecretRequestMessage.h  StunSharedSecretResponseMessage.cpp  StunSharedSecretResponseMessage.h  StunTransaction.cpp  StunTransaction.h  StunUnknownAttributes.cpp  StunUnknownAttributes.h  (+3 more)
libpcpnatpmp/: CMakeLists.txt  libpcpnatpmp.pc.cmake.in
libpcpnatpmp/include/: pcpnatpmp.h
libpcpnatpmp/src/: pcp_api.c  pcp_client_db.c  pcp_event_handler.c  pcp_msg.c  pcp_server_discovery.c
libpcpnatpmp/src/net/: findsaddr-udp.c  pcp_socket.c
libpcpnatpmp/src/windows/: pcp_win_defines.h
miniupnpc/: CMakeLists.txt
windows/: NATCA.rc  NATCA.rc.in
